# draft

./: CMakeCache.txt  CMakeLists.txt  Cargo.toml  README.md  build.ps1  build.sh  init_all.ps1  init_all.sh  stm32f4_bootloader.ioc
.cargo/: config.toml
Core/Src/: stm32f4xx_it.c
MBEDTLS/App/: mbedtls_config.h
application/: Cargo.toml  custom.x
application/src/: main.c  main.rs  system_stm32f4xx.c
boot/: Cargo.toml  custom.x
boot/src/: main.c  main.rs
cmake/: gcc-arm-none-eabi.cmake
common/inc/: bootloader.h  command_handler.h  crc.h  delta_update.h  flash.h  gcm_gmac.h  i2c_transport.h  image.h  main.h  ring_buffer.h  spi_transport.h  transport.h  uart_transport.h  xmodem.h
common/src/: bootloader.c  command_handler.c  crc.c  delta_update.c  flash.c  gcm_gmac.c  i2c_transport.c  image.c  ring_buffer.c  spi_transport.c  transport.c  uart_transport.c  xmodem.c
linker/: STM32F407VGTx_FLASH_APP.ld  STM32F407VGTx_FLASH_BOOT.ld  STM32F407VGTx_FLASH_LOADER.ld  STM32F407VGTx_FLASH_UPDATER.ld
loader/: Cargo.toml  custom.x  link.x
loader/.cargo/: config.toml
loader/src/: bootloader.rs  led.rs  lib.rs  main.c  main.rs  uart.rs  xmodem.rs
misc/: Cargo.toml
misc/src/: crypto.rs  firmware_update.rs  flash.rs  image.rs  lib.rs  ring_buffer.rs  vec.rs  xmodem.rs
scripts/: merge_images.py
stm32f4-pac/: Cargo.toml  device.x
stm32f4-pac/src/: adc1.rs  can1.rs  cryp.rs  dma2.rs  fpu.rs  fpu_cpacr.rs  fsmc.rs  hash.rs  i2c1.rs  iwdg.rs  lib.rs  ltdc.rs  nvic_stir.rs  otg_fs_device.rs  otg_fs_global.rs  otg_fs_host.rs  otg_hs_device.rs  otg_hs_global.rs  otg_hs_host.rs  rtc.rs  sai1.rs  scb_actrl.rs  sdio.rs  spi1.rs  stk.rs  syscfg.rs  tim11.rs  tim9.rs  uart4.rs  usart1.rs  wwdg.rs
stm32f4-pac/src/adc1/: cr2.rs  jofr.rs  jsqr.rs  smpr1.rs  smpr2.rs  sqr1.rs  sqr2.rs  sqr3.rs  sr.rs
stm32f4-pac/src/can1/: fa1r.rs  fb.rs  ffa1r.rs  fm1r.rs  fs1r.rs  tsr.rs
stm32f4-pac/src/cryp/: csgcmccmr.rs
stm32f4-pac/src/dac/: cr.rs
stm32f4-pac/src/ethernet_mac/: macfcr.rs  macffr.rs
stm32f4-pac/src/ethernet_mmc/: mmctimr.rs
stm32f4-pac/src/ethernet_ptp/: ptpppscr.rs
stm32f4-pac/src/exti/: emr.rs  ftsr.rs  imr.rs  pr.rs  rtsr.rs  swier.rs
stm32f4-pac/src/flash/: acr.rs  optcr.rs  optkeyr.rs  sr.rs
stm32f4-pac/src/fpu/: fpcar.rs  fpccr.rs  fpscr.rs
stm32f4-pac/src/fpu_cpacr/: cpacr.rs
stm32f4-pac/src/fsmc/: bcr.rs  bcr1.rs  btr.rs  bwtr.rs  pcr.rs  sr.rs
stm32f4-pac/src/gpioa/: afrl.rs  moder.rs  odr.rs  otyper.rs  pupdr.rs
stm32f4-pac/src/gpiob/: afrh.rs  bsrr.rs  lckr.rs  moder.rs  ospeedr.rs  pupdr.rs
stm32f4-pac/src/gpioi/: idr.rs  moder.rs  ospeedr.rs  pupdr.rs
stm32f4-pac/src/hash/: hash_hr.rs
stm32f4-pac/src/i2c1/: ccr.rs  cr1.rs  cr2.rs  dr.rs  oar1.rs  oar2.rs  sr1.rs  sr2.rs  trise.rs
stm32f4-pac/src/iwdg/: kr.rs  pr.rs  rlr.rs  sr.rs
stm32f4-pac/src/ltdc/: awcr.rs  bccr.rs  bpcr.rs  cdsr.rs  cpsr.rs  gcr.rs  icr.rs  ier.rs  isr.rs  layer.rs  lipcr.rs  srcr.rs  sscr.rs  twcr.rs
stm32f4-pac/src/nvic_stir/: stir.rs
stm32f4-pac/src/otg_fs_device/: diepctl.rs  diepctl0.rs  diepint0.rs  diepint1.rs  diepint2.rs  diepint3.rs  dieptsiz0.rs  dieptsiz1.rs  dieptsiz2.rs  dieptsiz3.rs  doepctl.rs  doepctl0.rs  doepint0.rs  doepint1.rs  doepint2.rs  doepint3.rs  doeptsiz0.rs  doeptsiz1.rs  doeptsiz2.rs  doeptsiz3.rs  dtxfsts0.rs  dtxfsts1.rs  dtxfsts2.rs  dtxfsts3.rs
stm32f4-pac/src/otg_fs_global/: dieptxf.rs  gccfg.rs  gintmsk.rs  grxstsp_device.rs  grxstsr_host.rs
stm32f4-pac/src/otg_fs_host/: hcchar0.rs  hcchar1.rs  hcchar2.rs  hcchar3.rs  hcchar4.rs  hcchar5.rs  hcchar6.rs  hcchar7.rs  hcfg.rs  hcint0.rs  hcint1.rs  hcint2.rs  hcint3.rs  hcint4.rs  hcint5.rs  hcint6.rs  hcint7.rs  hcintmsk0.rs  hcintmsk1.rs  hcintmsk2.rs  hcintmsk3.rs  hcintmsk4.rs  hcintmsk5.rs  hcintmsk6.rs  hcintmsk7.rs  hctsiz0.rs  hctsiz1.rs  hctsiz2.rs  hctsiz3.rs  hctsiz4.rs  hctsiz5.rs  hctsiz6.rs  hctsiz7.rs
stm32f4-pac/src/otg_hs_device/: diepctl.rs  diepdma1.rs  diepdma2.rs  diepdma3.rs  diepdma4.rs  diepdma5.rs  diepint.rs  dieptsiz.rs  dieptsiz0.rs  doepctl.rs  doepctl0.rs  doepint.rs  doeptsiz.rs  doeptsiz0.rs  dtxfsts.rs
stm32f4-pac/src/otg_hs_global/: gintsts.rs  gnptxfsiz.rs  gnptxsts.rs  grxstsp_peripheral.rs  grxstsr_peripheral.rs  tx0fsiz.rs
stm32f4-pac/src/otg_hs_host/: hcchar0.rs  hcchar1.rs  hcchar10.rs  hcchar11.rs  hcchar2.rs  hcchar3.rs  hcchar4.rs  hcchar5.rs  hcchar6.rs  hcchar7.rs  hcchar8.rs  hcchar9.rs  hcdma0.rs  hcdma1.rs  hcdma10.rs  hcdma11.rs  hcdma2.rs  hcdma3.rs  hcdma4.rs  hcdma5.rs  hcdma6.rs  hcdma7.rs  hcdma8.rs  hcdma9.rs  hcint0.rs  hcint1.rs  hcint10.rs  hcint11.rs  hcint2.rs  hcint3.rs  hcint4.rs  hcint5.rs  hcint6.rs  hcint7.rs  hcint8.rs  hcint9.rs  hcintmsk0.rs  hcintmsk1.rs  hcintmsk10.rs  hcintmsk11.rs  (+33 more)
stm32f4-pac/src/pwr/: cr.rs  csr.rs
stm32f4-pac/src/rcc/: ahb1enr.rs  cfgr.rs
stm32f4-pac/src/rng/: sr.rs
stm32f4-pac/src/rtc/: alrmar.rs  alrmassr.rs  alrmbr.rs  alrmbssr.rs  cr.rs  dr.rs  isr.rs  tsdr.rs  tsssr.rs  tstr.rs
stm32f4-pac/src/sai1/: ch.rs
stm32f4-pac/src/scb_actrl/: actrl.rs
stm32f4-pac/src/sdio/: clkcr.rs  resp1.rs  resp2.rs  resp3.rs  resp4.rs  sta.rs
stm32f4-pac/src/spi1/: cr1.rs  cr2.rs  crcpr.rs  dr.rs  i2scfgr.rs  i2spr.rs  rxcrcr.rs  sr.rs  txcrcr.rs
stm32f4-pac/src/stk/: calib.rs  ctrl.rs  load.rs  val.rs
stm32f4-pac/src/syscfg/: cmpcr.rs  exticr1.rs  exticr2.rs  exticr3.rs  exticr4.rs  memrm.rs  pmc.rs
stm32f4-pac/src/tim1/: bdtr.rs  ccer.rs  ccmr1_input.rs  ccmr1_output.rs  ccmr2_output.rs  cr2.rs  dier.rs  egr.rs  rcr.rs  sr.rs
stm32f4-pac/src/tim10/: cnt.rs  egr.rs  sr.rs
stm32f4-pac/src/tim11/: ccer.rs  ccmr1_input.rs  ccmr1_output.rs  dier.rs
stm32f4-pac/src/tim2/: ccmr2_output.rs  or.rs
stm32f4-pac/src/tim3/: arr.rs  ccer.rs  ccr.rs  cnt.rs  dier.rs  egr.rs  sr.rs
stm32f4-pac/src/tim5/: ccmr1_output.rs  ccmr2_input.rs
stm32f4-pac/src/tim6/: sr.rs
stm32f4-pac/src/tim9/: arr.rs  ccer.rs  ccmr1_input.rs  ccmr1_output.rs  ccr.rs  cr2.rs  dier.rs  egr.rs  sr.rs
stm32f407/: Cargo.toml
updater/: Cargo.toml  build.rs
updater/src/: main.c  main.rs  uart.rs
(+39 files in other folders)
