[workspace]
members = [
    "boot",
    "loader",
    "updater",
    "application",
    "stm32f4-pac",
    "misc"
]

[workspace.dependencies]
cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7.3", features = ["device"] }
panic-halt = "0.2.0"
stm32f4-pac = { path = "./stm32f4-pac", features = ["rt"] }

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "z"
panic = "abort"

[profile.dev]
opt-level = "z"
panic = "abort"