[package]
name = "misc"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { workspace = true, features = ["critical-section-single-core"] }
cortex-m-rt = { workspace = true, features = ["device"] }
stm32f4 = { workspace = true, features = ["rt"] }
rmodem = { version = "0.8.0", default-features = false, features = ["1k"] }

[features]
default = []