[package]
edition = "2021"
name = "stm32f4-pac"
rust-version = "1.65"

[dependencies]
critical-section = { version = "1.0", optional = true }
cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7.3", optional = true }
defmt = { version = "0.3.5", optional = true }
vcell = "0.1.3"
portable-atomic = { version = "1", default-features = false, optional = true }

[package.metadata.docs.rs]
features = ['atomics', 'critical-section', 'defmt', 'rt', 'stm32f401', 'stm32f407', 'stm32f413', 'stm32f469']
default-target = "thumbv7em-none-eabihf"
targets = []

[features]
default = ["critical-section", "rt"]
rt = ["cortex-m-rt/device"]
atomics = ["dep:portable-atomic"]
stm32f407 = []
